--- a/app/src/main/res/layout/test_item.xml
+++ b/app/src/main/res/layout/test_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:maxHeight="100dp"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@color/passed_test_color">
 
     <TextView
         android:layout_width="0dp"
