--- a/app/src/main/res/layout/test_item.xml
+++ b/app/src/main/res/layout/test_item.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:maxHeight="100dp"
     android:padding="5dp"
-    android:background="@color/passed_test_color">
+    android:background="@color/passed_test_color"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="Применение производной к решению задач"
         android:autoSizeMaxTextSize="25sp"
         android:autoSizeMinTextSize="1sp"
@@ -20,50 +20,46 @@
         android:textColor="@color/black"
 
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/test_category"
-        app:layout_constraintVertical_weight="0.6"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view"
+        app:layout_constraintRight_toLeftOf="@+id/author"
         app:layout_constraintHorizontal_weight="0.7"/>
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="Категория: Математика"
         android:id="@+id/test_category"
         android:textSize="15sp"
-        android:textColor="@color/link_color"
 
         app:layout_constraintTop_toBottomOf="@id/test_name"
-        app:layout_constraintBottom_toTopOf="@id/test_subsection"
-        app:layout_constraintVertical_weight="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view"
+        app:layout_constraintRight_toLeftOf="@+id/author"
         app:layout_constraintHorizontal_weight="0.7"/>
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="Тема: Производная"
         android:id="@+id/test_subsection"
         android:textSize="15sp"
-        android:textColor="@color/link_color"
 
         app:layout_constraintTop_toBottomOf="@id/test_category"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_weight="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view"
+        app:layout_constraintRight_toLeftOf="@+id/author"
         app:layout_constraintHorizontal_weight="0.7"/>
 
-    <View
+    <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/view"
+        android:id="@+id/author"
+        android:text="Автор:\nadmin"
+        android:textAlignment="textEnd"
+        android:textSize="15sp"
 
         app:layout_constraintLeft_toRightOf="@id/test_name"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/test_name"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_weight="0.3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
