--- a/app/src/main/res/layout/fragment_tests.xml
+++ b/app/src/main/res/layout/fragment_tests.xml
@@ -6,45 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".app.TestsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/search_layout"
-        android:layout_width="match_parent"
+    <EditText
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:padding="5dp"
-        android:orientation="horizontal"
+        android:id="@+id/search_query"
+
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:hint="@string/search_hint"
+
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/search_background_color">
+        app:layout_constraintRight_toLeftOf="@id/filter_button"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/search_button"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:hint="@string/search_hint"/>
+    <ImageButton
+        android:id="@+id/filter_button"
+        android:layout_width="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_height="0dp"
+        android:padding="5dp"
 
-        <ImageButton
-            android:id="@+id/search_button"
-            android:layout_width="40dp"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_search_button"
-            android:background="#0000"
-            android:contentDescription="@string/search_button_desc"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+        android:src="@drawable/ic_filters"
+        android:background="#0000"
+        android:contentDescription="@string/filters_button_desc"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/search_query"
+        />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_layout"
+        app:layout_constraintTop_toBottomOf="@+id/search_query"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
