--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".app.AuthActivity"
+    tools:context=".android.start.AuthActivity"
     android:weightSum="1">
 
     <TextView
