--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".app.ProfileFragment">
+    tools:context=".android.profile.ProfileFragment"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/icon_frame"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:0.8"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <ImageView
         android:id="@+id/profile_icon"
@@ -16,21 +28,22 @@
         android:src="@drawable/profile_icon_background"
         android:contentDescription="@string/profile_icon_content_desc"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/profile_menu"
+        app:layout_constraintTop_toTopOf="@id/icon_frame"
+        app:layout_constraintLeft_toLeftOf="@id/icon_frame"
+        app:layout_constraintRight_toRightOf="@id/icon_frame"
+        app:layout_constraintBottom_toBottomOf="@id/icon_frame"
         />
 
     <TextView
+        android:id="@+id/profile_letter"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.25"
         app:layout_constraintDimensionRatio="1:1"
-        android:id="@+id/profile_letter"
         android:gravity="center"
 
-        android:text="М"
+        tools:text="М"
+        android:textColor="@color/black"
         android:autoSizeMaxTextSize="2000sp"
         android:autoSizeTextType="uniform"
 
@@ -40,15 +53,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/profile_icon"
         />
 
-    <androidx.appcompat.widget.ActionMenuView
-        android:id="@+id/profile_menu"
-        android:layout_width="match_parent"
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.7"
+        android:minWidth="300dp"
         android:layout_height="0dp"
 
+        tools:listitem="@layout/support_simple_spinner_dropdown_item"
 
-
-        app:layout_constraintTop_toBottomOf="@+id/profile_icon"
+        app:layout_constraintTop_toBottomOf="@+id/icon_frame"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
