--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
@@ -16,5 +19,18 @@
         android:textColor="@color/black"
 
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:paddingHorizontal="15dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.8"
+
+        tools:listitem="@layout/support_simple_spinner_dropdown_item"
+        android:fadeScrollbars="false"
+        android:scrollbarStyle="outsideOverlay"
+
+        app:layout_constraintTop_toBottomOf="@id/title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
