--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -7,9 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_tests"
-        android:name="com.example.testssystem.android.tests.TestsFragment"
+        android:name="com.example.testssystem.android.tests.TestListFragment"
         android:label="@string/title_tests"
-        tools:layout="@layout/fragment_tests" />
+        tools:layout="@layout/fragment_test_list" >
+        <action
+            android:id="@+id/action_navigation_tests_to_testFragment"
+            app:destination="@id/testFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
@@ -35,5 +39,16 @@
         android:name="com.example.testssystem.android.profile.SecuritySettingsFragment"
         android:label="@string/security_settings_title"
         tools:layout="@layout/fragment_security_settings" />
+
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.example.testssystem.android.tests.TestFragment"
+        android:label="fragment_test"
+        tools:layout="@layout/fragment_test" >
+        <argument
+            android:name="test"
+            app:argType="com.example.testssystem.java.Test"
+            app:nullable="false" />
+    </fragment>
 
 </navigation>
